# test_dioxus_persistent

./: Cargo.toml  README.md
src/: constants.rs  header.rs  hooks.rs  main.rs  router.rs
src/views/: header.rs  home.rs  mod.rs
